update grade
